--- a/style.css
+++ b/style.css
@@ -27,3 +27,41 @@ body{
       justify-content: space-between;
       background-color: var(--rosa-forte);
   }
+  .cabecalho-link:hover{
+    color: var(--branco-fraco-rosa);
+    font-size: 1,9em;
+    transition: 0,3s;
+  }
+  .principal-capa{
+    background-color:var(--rosa-fraco);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1,5em
+
+  }
+  .principal-capa_titulo{
+   font-size: 5em;
+   font-family: var(--fonte-titulo);
+  }
+  .principal-capa_texto{
+    font-size: 3em;
+  }
+  .principal-capa_img{
+    width: 30%;
+    border-radius: 10px;
+  }
+  .principal-capa_combotao{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+  .principal-capa_botao{
+    background-color: var(--branco);
+    text-decoration: nome;
+    padding: 1,3em;
+    color: var(--rosa);
+    margin-top: 2em;
+    border-radius: 10px;
+    font-size: 1,2em;
+  }
